<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/nav_item_1"
        android:title="@string/mainpage_navi_item_homepage"/>
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@mipmap/nav_item_2"
        android:title="@string/mainpage_navi_item_category" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@mipmap/nav_item_3"
        android:title="@string/mainpage_navi_item_find" />
    <item
        android:id="@+id/navigation_person"
        android:icon="@mipmap/nav_item_4"
        android:title="@string/mainpage_navi_item_cart" />
    <item
        android:id="@+id/navigation_person1"
        android:icon="@mipmap/nav_item_5"
        android:title="@string/mainpage_navi_item_mysetting" />
</menu>